array.island.Island.scala.error
Compilation error:
Island:4: error: Int does not take parameters
  for (i<-1 to (num.length()-1)){
                          ^